# Find_mnemonik

./: BOBLO.txt  Cargo.toml  all_wallets.txt  btc.txt  confMnem.txt
src/: data.rs  eth.txt  main.rs
