[package]
name = "Find_mnemonik"
version = "1.0.5"
edition = "2021"

build = "build.rs"

[dependencies]
rand = "0.8.5"
hex = "0.4.3"

bitcoin = "0.30.1"
tiny-bip39 = "1.0.0"

rustils = "0.1.23"
bloomfilter = "1"

tiny-hderive = "0.3.0"
tiny-keccak = {version = "2.0.2", features = ['keccak']}
libsecp256k1 = "0.7.0"

num_cpus = "1.13.0"
tokio = { version = "1.20.1", features = ["full"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
