[package]
name = "Find_mnemonik"
version = "1.0.9"
edition = "2021"
#это нужно для иконки
build = "build.rs"

[dependencies]
rand = "0.8.5"
hex = "0.4.3"

bitcoin = "0.31.0"
tiny-bip39 = "1.0.0"

rustils = "0.1.23"
bloomfilter = "1"
bincode = "1.3.3"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

tiny-hderive = "0.3.0"
tiny-keccak = {version = "2.0.2", features = ['keccak']}
libsecp256k1 = "0.7.0"

keys = { path = "../keys" }

num_cpus = "1.13.0"
tokio = { version = "1.20.1", features = ["full"] }

#это нужно для иконки
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
